--- a/sc/uiconfig/scalc/ui/textimportcsv.ui
+++ b/sc/uiconfig/scalc/ui/textimportcsv.ui
@@ -2,7 +2,6 @@
 <!-- Generated with glade 3.22.1 -->
 <interface domain="sc">
   <requires lib="gtk+" version="3.18"/>
-  <requires lib="LibreOffice" version="1.0"/>
   <object class="GtkAdjustment" id="adjustment1">
     <property name="lower">1</property>
     <property name="upper">4294967295</property>
@@ -10,10 +9,23 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
+  <object class="GtkAdjustment" id="adjustment2">
+    <property name="upper">100</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="adjustment3">
+    <property name="upper">100</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
   <object class="GtkDialog" id="TextImportCsvDialog">
     <property name="can_focus">False</property>
     <property name="border_width">6</property>
     <property name="title" translatable="yes" context="textimportcsv|TextImportCsvDialog">Text Import</property>
+    <property name="modal">True</property>
+    <property name="default_width">0</property>
+    <property name="default_height">0</property>
     <property name="type_hint">dialog</property>
     <child>
       <placeholder/>
@@ -149,7 +161,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="svxlo-SvxTextEncodingBox" id="charset">
+                          <object class="GtkComboBoxText" id="charset">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                           </object>
@@ -159,7 +171,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="svxcorelo-SvxLanguageBox" id="language">
+                          <object class="GtkComboBoxText" id="language">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                           </object>
@@ -256,7 +268,6 @@
                                 <property name="xalign">0</property>
                                 <property name="active">True</property>
                                 <property name="draw_indicator">True</property>
-                                <property name="group">tofixedwidth</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -466,6 +477,7 @@
                                           <object class="GtkEntry" id="comboboxtext-entry">
                                             <property name="can_focus">True</property>
                                             <property name="activates_default">True</property>
+                                            <property name="width_chars">1</property>
                                           </object>
                                         </child>
                                       </object>
@@ -639,7 +651,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkComboBox" id="columntype">
+                              <object class="GtkComboBoxText" id="columntype">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                               </object>
@@ -657,11 +669,56 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="sclo-ScCsvTableBox" id="scrolledwindowcolumntype">
+                          <object class="GtkScrolledWindow" id="scrolledwindow">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="hexpand">True</property>
                             <property name="vexpand">True</property>
+                            <property name="hadjustment">adjustment2</property>
+                            <property name="vadjustment">adjustment3</property>
+                            <property name="hscrollbar_policy">always</property>
+                            <property name="vscrollbar_policy">always</property>
+                            <property name="shadow_type">in</property>
+                            <child>
+                              <object class="GtkViewport" id="viewport">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <child>
+                                  <object class="GtkBox" id="box">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                    <property name="orientation">vertical</property>
+                                    <child>
+                                      <object class="GtkDrawingArea" id="csvruler">
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="events">GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK | GDK_STRUCTURE_MASK</property>
+                                        <property name="hexpand">True</property>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="fill">True</property>
+                                        <property name="position">0</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <object class="GtkDrawingArea" id="csvgrid">
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="events">GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK | GDK_STRUCTURE_MASK</property>
+                                        <property name="hexpand">True</property>
+                                        <property name="vexpand">True</property>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="fill">True</property>
+                                        <property name="position">1</property>
+                                      </packing>
+                                    </child>
+                                  </object>
+                                </child>
+                              </object>
+                            </child>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -722,5 +779,9 @@
       <widget name="other"/>
       <widget name="texttextdelimiter"/>
     </widgets>
+  </object>
+  <object class="GtkMenu" id="popup">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
   </object>
 </interface>
